--- a/styles/global.css
+++ b/styles/global.css
@@ -100,6 +100,18 @@ button.outlined,
     border: .2rem solid var(--blue);
 }
 
+button.red,
+.button.red {
+    background: var(--red);
+    color: var(--white);
+}
+
+button.grey,
+.button.grey {
+    background: var(--grey-light);
+    color: var(--grey-dark);
+}
+
 /*==== HEADER ======================*/
 .content header {
     width: 80%;
